src/assets/css/suneditor-contents.css
/* suneditor contents */
.sun-editor-editable {
    font-family: Helvetica Neue, sans-serif;
    font-size: 13px;
    word-break: break-all;
    padding: 10px 20px 10px 20px;
    margin: 0;
}

/* float */
.sun-editor-editable .float-left {
    float: left;
}
.sun-editor-editable .float-right {
    float: right;
}
.sun-editor-editable .float-center {
    float: center;
}
.sun-editor-editable .float-none {
    float: none;
}

/** format style */
/* p */
.sun-editor-editable p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

/* div */
.sun-editor-editable div {
    display: block;
    margin: 0;
    padding: 0;
}

/* blockquote */
.sun-editor-editable blockquote {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
    border-style: solid;
    border-width: 0;
    padding-left: 20px;
    padding-right: 5px;
    border-left-width: 5px;
}
.sun-editor-editable blockquote {
    border-color: #8baab7;
}
.sun-editor-editable blockquote blockquote {
    border-color: #a2bfcc;
}
.sun-editor-editable blockquote blockquote blockquote {
    border-color: #bbd5e0;
}
.sun-editor-editable blockquote blockquote blockquote blockquote {
    border-color: #d4e3ea;
}

/* h1 */
.sun-editor-editable h1 {
    display: block;
    font-size: 2em;
    margin-block-start: 0.67em;
    margin-block-end: 0.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h2 */
.sun-editor-editable h2 {
    display: block;
    font-size: 1.5em;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h3 */
.sun-editor-editable h3 {
    display: block;
    font-size: 1.17em;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h4 */
.sun-editor-editable h4 {
    display: block;
    margin-block-start: 1.33em;
    margin-block-end: 1.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h5 */
.sun-editor-editable h5 {
    display: block;
    font-size: 0.83em;
    margin-block-start: 1.67em;
    margin-block-end: 1.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h6 */
.sun-editor-editable h6 {
    display: block;
    font-size: 0.67em;
    margin-block-start: 2.33em;
    margin-block-end: 2.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}

/* hr */
.sun-editor-editable hr {
    border-width: 1px 0 0;
    border-color: black;
    border-image: initial;
    height: 1px;
}
.sun-editor-editable hr.solid {
    border-style: solid none none;
}
.sun-editor-editable hr.dotted {
    border-style: dotted none none;
}
.sun-editor-editable hr.dashed {
    border-style: dashed none none;
}
.sun-editor-editable img.inner-link {
    padding: 1px;
    margin: 1px;
    outline: 1px solid #a2bfcc;
}

/* table */
.sun-editor-editable table {
    table-layout: auto;
    border: 1px solid rgb(204, 204, 204);
    width: 100%;
    max-width: 100%;
    margin-bottom: 20px;
    background-color: transparent;
    border-spacing: 0;
    border-collapse: collapse;
}
.sun-editor-editable table tr {
    border: 1px solid #ccc;
}
.sun-editor-editable table td {
    border: 1px solid #ccc; padding:8px;
}

/* image */
.sun-editor-editable .sun-editor-id-image-container {
    text-align: center;
}
.sun-editor-editable .sun-editor-id-image-container figcaption {
    padding: 1em .5em;
    font-size: 13px;
    text-align: center;
}
.sun-editor-editable .sun-editor-id-image-container figcaption p{
    line-height: 2;
    margin: 0;
}
.sun-editor-editable .sun-editor-id-image-container a img {
    padding: 1px;
    margin: 1px;
    outline: 1px solid #8baab7;
}
.sun-editor-editable .sun-editor-image-cover {
    outline: none;
    line-height: 0;
}
.sun-editor-editable .sun-editor-image-cover > figcaption:not([contenteditable=false]) {
    background-color: #f3f3f3;
}

/** video iframe tags */
.sun-editor-editable .sun-editor-iframe-cover {
    display: inline-block;
    position: relative;
    margin: 0 2px 0 2px;
    line-height: 0;
    padding: 0;
    border: 1px solid #9e9e9e;
}
.sun-editor-editable .sun-editor-iframe-inner-cover {
    position:absolute;
    width:100%;
    height:100%;
    left:0px;
    top:0px;
}

/** show blocks */
.sun-editor-show-block p:not([contenteditable=false]), .sun-editor-show-block div:not([contenteditable=false]), .sun-editor-show-block h1:not([contenteditable=false]), .sun-editor-show-block h2:not([contenteditable=false]), .sun-editor-show-block h3:not([contenteditable=false]), .sun-editor-show-block h4:not([contenteditable=false]), .sun-editor-show-block h5:not([contenteditable=false]), .sun-editor-show-block h6:not([contenteditable=false]) {
    border: 1px dashed #a2bfcc;
    padding: 10px 8px 8px 8px;
}
.sun-editor-show-block p:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA0AAAAPAQMAAAAF7dc0AAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAaSURBVAjXY/j/gwGCPvxg+F4BQiAGDP1HQQByxxw0gqOzIwAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block div:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAPAQMAAAAxlBYoAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAmSURBVAjXY/j//wcDDH+8XsHwDYi/hwNx1A8w/nYLKH4XoQYJAwCXnSgcl2MOPgAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block h1:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAfSURBVAjXY/j/v4EBhr+9B+LzEPrDeygfhI8j1CBhAEhmJGY4Rf6uAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h2:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAmSURBVAjXY/j/v4EBhr+dB+LtQPy9geEDEH97D8T3gbgdoQYJAwA51iPuD2haEAAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block h3:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j/v4EBhr+dB+LtQPy9geHDeQgN5p9HqEHCADeWI+69VG2MAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h4:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAPAQMAAADTSA1RAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j//wADDH97DsTXIfjDdiDdDMTfIRhZHRQDAKJOJ6L+K3y7AAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h5:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAlSURBVAjXY/j/v4EBhr+1A/F+IO5vYPiwHUh/B2IQfR6hBgkDABlWIy5uM+9GAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h6:not([contenteditable=false]) {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j/v4EBhr+dB+LtQLy/geFDP5S9HSKOrA6KAR9GIza1ptJnAAAAAElFTkSuQmCC') no-repeat;
}

